# MATLIB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: matlib.h
include/matlib/: matrix.h
test/: matrix_test.cpp
